--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <body>
   <h1>welcome</h1>
     <h1>coming soon......</h1>
+    <h1>.....contact for more information.....</h1>
+   <center> <h1>7994673308</h1></center>
   </body>
   
   
