--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <body>
   <h1>welcome</h1>
     <h1>coming soon......</h1>
+    <h1>nandan will be back soon 🤗</h1>
     <h1>.....contact for more information.....</h1>
    <center> <h1>7994673308</h1></center>
   </body>
