--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="box">
   <img src="my.jpg" alt="" class="box-img">
   <h1>
-DarkCode</h1>
+NANDAN P</h1>
 <h5>
 Web Devloper - Web Designer</h5>
 <p>
