--- a/wedding/index.html
+++ b/wedding/index.html
@@ -47,7 +47,7 @@
         <a href="https://goo.gl/maps/AbzpaApRBFL93PWW6" target="_blank">
           <div class="venue">SEE THE VENUE</div>
         </a>
-        <a href="" download="Invitation | 15 JAn | Hope to see you there!">
+        <a href="#" >  <! –– download="Invitation | 15 JAn | Hope to see you there!" ––>
           <div class="venue">DOWNLOAD INVITATION CARD</div>
         </a>
         <a href="gallery.html" target="_blank">
