gallery invitation clear

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -47,10 +47,10 @@
         <a href="https://goo.gl/maps/AbzpaApRBFL93PWW6" target="_blank">
           <div class="venue">SEE THE VENUE</div>
         </a>
-        <a href="#" >  <! –– download="Invitation | 15 JAn | Hope to see you there!" ––>
-          <div class="venue">DOWNLOAD INVITATION CARD</div>
+        <a href="invitation/CARD.pdf" target="_blank">  
+          <div class="venue">INVITATION CARD</div>
         </a>
-        <a href="gallery.html" target="_blank">
+        <a href="gallery/Neethu Rahul.pdf" target="_blank">
          <div class="venue">GALLERY</div>
        </a>
       </div>
