ivitation card converted from pdf to png

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -47,7 +47,7 @@
         <a href="https://goo.gl/maps/AbzpaApRBFL93PWW6" target="_blank">
           <div class="venue">SEE THE VENUE</div>
         </a>
-        <a href="invitation/CARD.pdf" target="_blank">  
+        <a href="invitation/CARD.png" target="_blank">  
           <div class="venue">INVITATION CARD</div>
         </a>
         <a href="gallery/Neethu Rahul.pdf" target="_blank">
