gallery updated ,music upto play first version updated

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -50,7 +50,7 @@
         <a href="invitation/CARD.png" target="_blank">  
           <div class="venue">INVITATION CARD</div>
         </a>
-        <a href="gallery/Neethu Rahul.pdf" target="_blank">
+        <a href="gallery/index.html">
          <div class="venue">GALLERY</div>
        </a>
       </div>
