My Name completed

--- a/event.html
+++ b/event.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" light-mode="dark">
   <head>
-    <title>John Doe</title>
+    <title>Nandan P</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="awesome portfolio website, portfolio website, free website template, open source, open source website"/>
-    <meta name="description" content="The open source project that takes care of showcasing your work while you focus on learning and innovation"/>
+    <meta name="description" content="This is my portfolio."/>
     <!--Favicon-->
     <link id="favicon" rel="icon" href="assets/images/favicon.png" type="image/png" />
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6D61F5TL4"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6D61F5TL4"></script> -->
     <!-- Robot.txt -->
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow"/>
     <!-- Open Graph Cards-->
-    <meta property="og:title" content="John Doe | Event" />
+    <meta property="og:title" content="Nandan P | Event" />
     <meta property="og:type" content="profile" />
-    <meta property="og:description" content="The open source project that takes care of showcasing your work while you focus on learning and innovation"/>
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/event.html"/>
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/event.html"/>
+    <meta property="og:description" content="This is my portfolio."/>
+    <meta property="og:nandanp.in" content="https://nandanp.in/event.html"/>
+    <meta property="og:url" content="https://nandanp.in/event.html"/>
     <!-- Twitter Cards-->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/research.html" />
+    <meta name="twitter:site" content="https://nandanp.in/research.html" />
 
-    <meta name="application-name" content="John Doe | Research" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Research" />
+    <meta name="application-name" content="Nandan P | Research" />
+    <meta name="apple-mobile-web-app-title" content="Nandan P | Research" />
     <meta
       name="summary"
       content="The open source project that takes care of showcasing your work while you focus on learning and innovation"
@@ -51,14 +51,14 @@
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
     <script defer src="./assets/js/dynamicTitle.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-M11CMZ12Q');
-    </script>
+    </script> -->
   </head>
  
 <body class="no-scroll-preload">
