--- a/sem_temp.html
+++ b/sem_temp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" light-mode="dark">
   <head>
-    <title>John Doe | Semester Memories</title>
+    <title>Nandan P | Semester Memories</title>
 
     <!-- Required meta tags -->
     <meta charset="UTF-8" />
@@ -12,7 +12,7 @@
     />
     <meta
       name="description"
-      content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world."
+      content="This is my portfolio."
     />
 
     <!-- Robot.txt -->
@@ -21,29 +21,29 @@
     <meta name="AdsBot-Google" content="index,follow" />
 
     <meta
-      property="og:site_name"
-      content="https://portfolio.smaranjitghose.codes/sem_temp.html"
+      property="og:nandanp.in"
+      content="https://nandanp.in/sem_temp.html"
     />
-    <meta property="og:title" content="John Doe | Semester Memories" />
+    <meta property="og:title" content="Nandan P | Semester Memories" />
     <meta
       property="og:description"
-      content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world."
+      content="This is my portfolio."
     />
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://portfolio.smaranjitghose.codes/sem_temp.html"
+      content="https://nandanp.in/sem_temp.html"
     />
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:site"
-      content="https://portfolio.smaranjitghose.codes/sem_temp.html"
+      content="https://nandanp.in/sem_temp.html"
     />
 
-    <meta name="application-name" content="John Doe | Semester Memories" />
+    <meta name="application-name" content="Nandan P | Semester Memories" />
     <meta
       name="apple-mobile-web-app-title"
-      content="John Doe | Semester Memories"
+      content="Nandan P | Semester Memories"
     />
     <meta
       name="summary"
@@ -100,14 +100,14 @@
 
     <script defer src="./assets/js/dynamicTitle.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
     <script>
        window.dataLayer = window.dataLayer || [];
        function gtag(){dataLayer.push(arguments);}
        gtag('js', new Date());
 
        gtag('config', 'G-M11CMZ12Q');
-    </script>
+    </script> -->
   </head>
 
   <body class="no-scroll-preload">
@@ -135,10 +135,10 @@
     <!-- Dynamic footer section -->
 
     <!-- Google Analytics -->
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-G6D61F5TL4"
-    ></script>
+    ></script> -->
     <!-- Fetching our Google Tag Manager -->
 
     <!-- script -->
