--- a/wedding/gallery/index.html
+++ b/wedding/gallery/index.html
@@ -6,8 +6,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
       <meta property="og:type" content="website" />
-      <meta property="og:url" content="" />
-      <meta property="og:site_name" content="Wedding Invitation | 15th Jan" />
+      <meta property="og:url" content="https://nandanp.in/wedding/index.html" />
+      <meta property="og:nandanp.in" content="Wedding Invitation | 15th Jan" />
       <meta name="twitter:card" content="website">
       <meta name="twitter:site" content="Wedding Invitation | 15th Jan">
       <meta name="twitter:title" content="Wedding Invitation | 15th Jan">
