--- a/education.html
+++ b/education.html
@@ -2,27 +2,27 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>John Doe | Education</title>
+    <title>Nandan P | Education</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
-    <meta name="description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
+    <meta name="description" content="This is my portfolio." />
 
     <!-- Robot.txt -->
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
 
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/education.html">
-    <meta property="og:title" content="John Doe | Education">
-    <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
+    <meta property="og:site_name" content="https://nandanp.in/education.html">
+    <meta property="og:title" content="Nandan P | Education">
+    <meta property="og:description" content="This is my portfolio.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/education.html">
+    <meta property="og:url" content="https://nandanp.in/education.html">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/education.html">
+    <meta name="twitter:site" content="https://nandanp.in/education.html">
 
-    <meta name="application-name" content="John Doe | Education" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Education" />
+    <meta name="application-name" content="Nandan P | Education" />
+    <meta name="apple-mobile-web-app-title" content="Nandan P | Education" />
     <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
 
@@ -45,14 +45,14 @@
     <link id='favicon' rel="shortcut icon" href="assets/images/favicon.png" type="image/x-png">
     <script defer src="./assets/js/dynamicTitle.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'G-M11CMZ12Q');
-    </script>
+    </script> -->
 </head>
 
 <body class="no-scroll-preload">
@@ -273,7 +273,7 @@
     <!-- Education Section  -->
     <section class="s2">
         <div class="container-sm  edSection">
-            <div class="conatiner text-center mb-5">
+            <div class="conatiner text-center mb-5" id="educ">
                 <h1 class="head" data-aos="fade-up" data-aos-delay="300">Formal <span class="edu_background">Education</span></h1>
             </div>
             
@@ -289,14 +289,14 @@
 
       <div class="timeline-content js--fadeInLeft">
         <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline1.png'); background-repeat: no-repeat; background-size: auto;"></div>
-        <div class="date date1">2021-2022</div>
+        <div class="date date1">2019 - 2022</div>
         <div>
-            <h2 class="timelineHeading">Columbia University</h2>
-            <h6>Masters of Science, Computer Science & Engineering</h6>
-            <li>Top 1% in the department</li>
-            <li>Best Undergraduate Researcher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h2 class="timelineHeading">University of Calicut</h2>
+            <h6> Bachelor of Computer Application </h6>
+            <li>Participated in IEDC Summit 2022</li>
+            <li>CEO of IEDC in college</li>
+            <li>Member of Tinkerhub</li>
+            <li>NSS volunteer</li>
         </div>
       </div>
    </div> 
@@ -310,14 +310,12 @@
         <div>
             <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top"></div>
         </div>
-        <div class="date date2">2017-2021</div>
+        <div class="date date2">2017 - 2019</div>
         <div class="alignment">
-            <h3 class="timelineHeading2">Massachusetts Institute of Technology</h3>
-            <h6>Bachelors of Science, Computer Science & Engineering</h6>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h3 class="timelineHeading2">Board of Higher secondary</h3>
+            <h6>Computer Science</h6>
+            <li>Topper in the department</li>
+            <li>NSS volunteer</li>
         </div>
       </div>
 
@@ -333,12 +331,9 @@
         <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline3.png'); background-repeat: no-repeat; background-size: auto"></div>
         <div class="date date3">2013-2017</div>
         <div class="align-third">
-            <h2 class="timelineHeading3">Delhi Public School</h2>
-            <h6>High School</h6>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h2 class="timelineHeading3">Board of Public Examinations</h2>
+            <h6>SSLC</h6>
+            <li>red cross volunteer</li>
         </div>
       </div>
     </div>
@@ -362,7 +357,7 @@
     <!-- Dynamic footer section -->
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6D61F5TL4"></script>
+    
     <!-- Fetching our Google Tag Manager -->
 
     <!-- script -->
