--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>Nandan | Home</title>
+    <title>Nandan P | Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
-    <meta name="description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
+    <meta name="description" content="This is my portfolio." />
     <!-- Robot.txt -->
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/">
-    <meta property="og:title" content="John Doe | Home">
-    <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
+    <meta property="og:nandanp.in" content="https://nandanp.in/">
+    <meta property="og:title" content="Nandan P | Home">
+    <meta property="og:description" content="This is my portfolio.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/">
+    <meta property="og:url" content="https://nandanp.in/">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/">
-    <meta name="application-name" content="John Doe | Home" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Home" />
+    <meta name="twitter:site" content="https://nandanp.in/">
+    <meta name="application-name" content="Nandan P | Home" />
+    <meta name="apple-mobile-web-app-title" content="Nandan P | Home" />
     <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <!--For Dark/Light mode Toggle-->
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
@@ -37,14 +37,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <script defer src="./assets/js/dynamicTitle.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag(){dataLayer.push(arguments);}5646546
         gtag('js', new Date());
 
         gtag('config', 'G-M11CMZ12Q');
-    </script>
+    </script> -->
 </head>
 
 <body class="no-scroll-preload">
@@ -70,16 +70,16 @@
         <div class="text col-sm-6" style="margin-top: 140px;">Hi <span class="wave"><img src="assets/images/Hand.gif" width="35px"></span>&nbsp;, I'm <span class="header">Nandan</span>
             <div class="center">
                 <div>
-                    <img src="assets/images/dp_male.svg" alt="" class="rounded-circle" height="200" width="200">
+                    <img src="assets/images/nandu_dp.jpeg" alt="" class="rounded-circle" height="200" width="200">
                 </div>
                 <br/>
                 <span style="display: inline;">I am into <span class="animated-text"
-                    data-words="Designing, UI/UX, Cloud Computing, Web Development, Open Source, Mentoring"></span>
+                    data-words="Full Stack Development, Cloud Computing, Web Development, Open Source, Android Development"></span>
                 </span>
                 <div>
                     <div class="social-icons">
 
-                        <a class="socialicon twitter" href="" target="_blank" rel="author">
+                        <a class="socialicon twitter" href="https://twitter.com/nandannnp" target="_blank" rel="author">
                             <!-- SVG code for twitter icon -->
                             <svg class="twitter-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500" enable-background="new 0 0 500 500" xml:space="preserve">
                                 <!-- bird body -->
@@ -135,7 +135,7 @@
                             </svg>
                         </a>
 
-                        <a class="socialicon dribbble" href="" target="_blank" rel="author">
+                        <!-- <a class="socialicon dribbble" href="" target="_blank" rel="author">
                             <svg class="dribbble-icon" viewBox="0 0 256 256" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
                             <g>
                                 <path
@@ -143,9 +143,9 @@
                                     fill="#B2215A" y="0"></path>
                             </g>
                             </svg>
-                        </a>
+                        </a> -->
 
-                        <a class="socialicon linkedin" href="" target="_blank" rel="author">
+                        <a class="socialicon linkedin" href="https://www.linkedin.com/in/nandannnp/" target="_blank" rel="author">
                             <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="35" viewBox="0 0 24 24" fill="#0e76a8" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin">
                                 <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                 <rect x="2" y="9" width="4" height="12"></rect>
@@ -153,7 +153,7 @@
                             </svg>
                         </a>
 
-                        <a class="socialicon codeforces" href="" target="_blank" rel="author">
+                        <!-- <a class="socialicon codeforces" href="" target="_blank" rel="author">
                             <svg class="codeforces-icon" xmlns="http://www.w3.org/2000/svg" viewBox="5 0 14 19" width="100" height="100">
                                 <g>
                                     <rect class="red" x="15" width="2" height="6.5" rx="0.7" y="0" fill="#AE0F0A" />
@@ -161,13 +161,13 @@
                                     <rect class="yellow" x="9" width="2" height="6.5" rx="0.7" y="0" fill="#FFD400" />
                                 </g>
                             </svg>
+                        </a> -->
+
+                        <a class="socialicon kaggle" href="https://wa.me/917994673308?text=Hello%20Nandan" target="_blank" rel="author">
+                            <i class="fab fa-whatsapp"></i>
                         </a>
 
-                        <a class="socialicon kaggle" href="" target="_blank" rel="author">
-                            <i class="fab fa-kaggle"></i>
-                        </a>
-
-                        <a class="socialicon instagram" href="" target="_blank" rel="author">
+                        <a class="socialicon instagram" href="https://www.instagram.com/nandu_nnp/" target="_blank" rel="author">
                             <!-- svg code for instagram icon -->
                             <svg class="instagram-icon" x="0px" y="0px" viewBox="0 0 202.5 202.5" style="enable-background:new 0 0 202.5 202.5;">
                                 <circle id="littleCircle" class="st0" cx="101" cy="101.5" r="18.9" />
@@ -178,7 +178,7 @@
                             </svg>
                         </a>
 
-                        <a class="socialicon github" href="" target="_blank" rel="author">
+                        <a class="socialicon github" href="https://github.com/NandanNNP" target="_blank" rel="author">
                             <!-- SVG code for Github icon -->
                             <svg class="github-icon" width="45px" height="45px" viewBox="0 0 300 300">
                                 <!-- body -->
@@ -202,7 +202,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6D61F5TL4"></script>
     <!-- Fetching our Google Tag Manager -->
 
     <!--JavaScript at end of body for optimized loading-->
