--- a/reference.html
+++ b/reference.html
@@ -2,15 +2,15 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>John Doe | References</title>
+    <title>Nandan P | References</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
-    <meta name="description" content="This project serves free and beautiful portfolio template for everyone. The sole aim of this project is to help all those who are not sure or face difficulties while trying to create the perfect portfolio for themselves. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world."
+    <meta name="description" content="This is my portfolio."
     />
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6D61F5TL4"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6D61F5TL4"></script> -->
     <!-- Fetching our Google Tag Manager -->
 
     <!-- Robot.txt -->
@@ -18,16 +18,16 @@
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
 
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/reference.html">
-    <meta property="og:title" content="John Doe | reference">
-    <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
+    <meta property="og:nandanp.in" content="https://nandanp.in/reference.html">
+    <meta property="og:title" content="Nandan P | reference">
+    <meta property="og:description" content="This is my portfolio.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/reference.html">
+    <meta property="og:url" content="https://nandanp.in/reference.html">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/reference.html">
+    <meta name="twitter:site" content="https://nandanp.in/reference.html">
 
-    <meta name="application-name" content="John Doe | reference" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | reference" />
+    <meta name="application-name" content="Nandan P | reference" />
+    <meta name="apple-mobile-web-app-title" content="Nandan P | reference" />
     <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
@@ -58,14 +58,14 @@
     });
   </script> -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'G-M11CMZ12Q');
-    </script>
+    </script> -->
 </head>
 
 <body class="no-scroll-preload">
