--- a/techstack.html
+++ b/techstack.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>John Doe | Tech Stack</title>
+    <title>Nandan P | Tech Stack</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -10,10 +10,10 @@
     <meta name="keywords"
         content="free portfolio template,portfolio template, portfolio website template, open source and contribution to open source" />
     <meta name="description"
-        content="This project serves as a free and beautiful portfolio template for everyone who needs the perfect portfolio. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
+        content="This is my portfolio." />
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6D61F5TL4"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6D61F5TL4"></script> -->
 
     <!-- Robot.txt -->
     <meta name="robots" content="index,follow" />
@@ -21,19 +21,19 @@
     <meta name="AdsBot-Google" content="index,follow" />
 
     <!-- Open Graph for Social Media -->
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/techstack.html" />
-    <meta property="og:title" content="John Doe | Tech Stack" />
+    <meta property="og:site_name" content="https://nandanp.in/techstack.html" />
+    <meta property="og:title" content="Nandan P | Tech Stack" />
     <meta property="og:description"
-        content="This project serves as a free and beautiful portfolio template for everyone who needs the perfect portfolio. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
+        content="This is my portfolio." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/techstack.html" />
+    <meta property="og:url" content="https://nandanp.in/techstack.html" />
     <meta name="twitter:card" content="summary" />
 
     <!-- Twitter Posts -->
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/techstack.html" />
+    <meta name="twitter:site" content="https://nandanp.in/techstack.html" />
 
-    <meta name="application-name" content="John Doe | Tech Stack" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Tech Stack" />
+    <meta name="application-name" content="Nandan P | Tech Stack" />
+    <meta name="apple-mobile-web-app-title" content="Nandan P | Tech Stack" />
     <meta name="summary"
         content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
@@ -57,14 +57,14 @@
     <!--Favicon-->
     <script defer src="./assets/js/dynamicTitle.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-M11CMZ12Q');
-    </script>
+    </script> -->
     <style>
       
     </style>
@@ -207,13 +207,17 @@
                         <div class="html_icon techstack_icon"><i class="fab fa-html5"></i></div>
                         <div class="css_icon techstack_icon"><i class="fab fa-css3-alt"></i></div>
                         <div class="js_icon techstack_icon"><i class="fab fa-js-square"></i></div>
-                        <div class="node_icon techstack_icon"><i class="fab fa-node"></i></div>
+                        <div class="linux_icon techstack_icon"><i class="fab fa-linux"></i></div>
                         <div class="python_icon techstack_icon"><i class="fab fa-python"></i></div>
                         <div class="cpp_icon techstack_icon"><i class="fab fa-cuttlefish">++</i></div>
                         <div class="c_icon techstack_icon"><i class="fab fa-cuttlefish"></i></div>
                         <div class="git_icon techstack_icon"><i class="fab fa-git-alt"></i></div>
                         <div class="bootstrap_icon techstack_icon"><i class="fab fa-bootstrap"></i></div>
                         <div class="react_icon techstack_icon"><i class="fab fa-react"></i></div>
+                        <div class="angular_icon techstack_icon"><i class="fab fa-angular"></i></div>
+                        <div class="django_icon techstack_icon"><img src="./assets/images/techstack-page/django.png" alt=""></div>
+                        <div class="mysql_icon techstack_icon"><img src="./assets/images/techstack-page/mysql.png" alt=""></div>
+
                     </div>
                 </div>
 
