--- a/travel_temp.html
+++ b/travel_temp.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
     <head>
-        <title>John Doe | Travel</title>
+        <title>Nandan P | Travel</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -12,21 +12,21 @@
         <meta name="keywords"
             content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
         <meta name="description"
-            content="This project serves as a free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
+            content="This is my portfolio." />
         <!-- Robot.txt -->
         <meta name="robots" content="index,follow" />
         <meta name="Googlebot" content="index,follow" />
         <meta name="AdsBot-Google" content="index,follow" />
-        <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/experience.html">
-        <meta property="og:title" content="John Doe | Experience">
+        <meta property="og:nandanp.in" content="https://nandanp.in/travel_temp.html">
+        <meta property="og:title" content="Nandan P | Experience">
         <meta property="og:description"
-            content="This project serves as a free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
+            content="This is my portfolio.">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://portfolio.smaranjitghose.codes/experience.html">
+        <meta property="og:url" content="https://nandanp.in/travel_temp.html">
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/experience.html">
+        <meta name="twitter:site" content="https://nandanp.in/travel_temp.html">
 
-        <meta name="application-name" content="John Doe | Experience" />
+        <meta name="application-name" content="Nandan P | Experience" />
         <meta name="apple-mobile-web-app-title" content="John Doe | Experience" />
         <meta name="summary"
             content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
@@ -54,14 +54,14 @@
         <script defer src="./assets/js/dynamicTitle.js"></script>
         <link rel="stylesheet" href="assets/css/travel_temp.css">
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
+        <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
 
             gtag('config', 'G-M11CMZ12Q');
-        </script>
+        </script> -->
     </head>
 
     <body class="no-scroll-preload">
@@ -116,7 +116,7 @@
         <!-- Scripts -->
 
         <!-- Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6D61F5TL4"></script>
+        <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6D61F5TL4"></script> -->
         <!-- Fetching our Google Tag Manager -->
 
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"
