--- a/wedding/index.html
+++ b/wedding/index.html
@@ -6,21 +6,21 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
       <meta property="og:type" content="website" />
-      <meta property="og:url" content="" />
+      <meta property="og:url" content="https://nandanp.in/wedding/index.html" />
       <meta property="og:site_name" content="Wedding Invitation | 15th Jan" />
       <meta name="twitter:card" content="website">
       <meta name="twitter:site" content="Wedding Invitation | 15th Jan">
       <meta name="twitter:title" content="Wedding Invitation | 15th Jan">
       <meta name="twitter:description"
          content="With the divine grace of the almighty, inviting you and your family to elder sister's wedding to be held on 15th January at Munnas auditorium, Valiyakunnu,Malappuram from 10:30 AM onwards.">
-
+      
       <title>Wedding Invitation | Jan 15 | Munnas auditorium, Valiyakunnu</title>
 
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
       <link rel="stylesheet" href="./css/style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <script src="https://kit.fontawesome.com/3944c00513.js" crossorigin="anonymous"></script>
+      <script src="https://kit.fontawesome.com/c3a798b755.js" crossorigin="anonymous"></script>
    </head>
    <body>
       
